2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use variable instead of directly calling tools.
	
2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-utils.adb:
	(Integer_Random): Ignore warnings during instantiation of this package.

	* makefile:
	Add section to build AWS based on project files.
	(gbuild): New target.
	(gclean): Idem.
	(gsetup): Idem.

	* src.gpr:
	New version, this version make it possible to develop AWS using
	 the project files from GPS.

2003-07-15  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server-protocol_handler.adb:
	Minor reformatting.

2003-07-09  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-response-set.adb:
	(Cache_Control): Add header only if a value has been specified.

2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-jabber.ads, aws-jabber.adb:
	Moved to ../xsrc.

2003-07-03  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-resources-embedded.adb:
	(File_Size): Remove N variable, not really needed.
	(File_Timestamp): Idem.
	(Size): Minor reformatting.
	Update copyright notice.

	* aws-resources-embedded.ads:
	(Size): Minor reformatting.
	Update copyright notice.

	* aws-resources-files.ads, aws-resources-files.adb:
	(Size): Minor reformatting.
	Update copyright notice.	

	* aws-resources-streams.ads, aws-resources-streams.adb:
	(Size): Minor reformatting.

	* aws-resources.ads:
	(Size): Minor reformatting.
	Update copyright notice.

2003-07-03  Pascal Obry  <p.obry@wanadoo.fr>
	
	* aws-resources-streams.adb:
	Minor reformatting.

	* aws-resources-streams.ads:
	(Size): Change comments.
	Minor reformatting.

	* aws-response.adb:
	(Content_Length): Image renamed CL_Image and set as constant.
	Minor reformatting.

	* aws-status-set.adb:
	(Update_Data_From_Header): Set Content_Length as constant.

	* aws-ldap-client.adb:
	(C_Scope): Declare as constant.
	(C_Bool): Idem.

	* aws-net-ssl.adb:
	(Error_Str): Suppress warnings for Buffer. GNAT detect it as being
	 constant. This is not true as it is passed to a C routine that