@@ -1,3 +1,8 @@
+2003-08-24  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server.ads, aws-server.adb:
+	(Start_Log): Add parameter Auto_Flush.
+
 2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
